// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanProcessor merges args together and completes resolves path 1`] = `
Object {
  "copy": Array [
    Object {
      "dest": "<PROJECT_ROOT>/dist/static-1",
      "src": "<PROJECT_ROOT>/static-1",
    },
    Object {
      "dest": "<PROJECT_ROOT>/dist/static-2",
      "src": "<PROJECT_ROOT>/static-2",
    },
    Object {
      "dest": "<PROJECT_ROOT>/dist/static-3",
      "hash": true,
      "src": "<PROJECT_ROOT>/static-3",
    },
  ],
  "del": Array [
    "first",
    "second",
    "third",
  ],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/first",
    "<PROJECT_ROOT>/dist/second",
    "<PROJECT_ROOT>/dist/third",
  ],
}
`;

exports[`cleanProcessor removes duplicates 1`] = `
Object {
  "copy": Array [
    Object {
      "dest": "<PROJECT_ROOT>/dist/static-1",
      "src": "<PROJECT_ROOT>/static-1",
    },
  ],
  "del": Array [
    "first",
  ],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/first",
  ],
}
`;
